Fix: add a max-height to todo description textarea
If the user makes it too large, the body will overflow and some parts of the form will not be shown clearly.

--- a/src/style.css
+++ b/src/style.css
@@ -271,6 +271,7 @@ textarea::placeholder {
 
 #todo-form #todo-desc {
   height: 3rem;
+  max-height: 20rem;
   overflow: auto;
   resize: vertical;
   word-wrap: break-word;
